# skule

./: CMakeLists.txt  main.cpp  temp_tasken.cpp  temp_tasken.h
